@@ -105,6 +105,7 @@
                   <a href="#" id="patient-modified-from">Before modification</a>
                 </li>
                 <li data-icon="gear"><a href="#" id="patient-archive">Download ZIP</a></li>
+                <li data-icon="gear"><a href="#" id="patient-media">Download DICOMDIR</a></li>
               </ul>
             </div>
           </div>
@@ -151,6 +152,7 @@
                   <a href="#" id="study-modified-from">Before modification</a>
                 </li>
                 <li data-icon="gear"><a href="#" id="study-archive">Download ZIP</a></li>
+                <li data-icon="gear"><a href="#" id="study-media">Download DICOMDIR</a></li>
               </ul>
             </div>
           </div>
@@ -200,6 +202,7 @@
                 </li>
                 <li data-icon="search"><a href="#" id="series-preview">Preview this series</a></li>
                 <li data-icon="gear"><a href="#" id="series-archive">Download ZIP</a></li>
+                <li data-icon="gear"><a href="#" id="series-media">Download DICOMDIR</a></li>
               </ul>
             </div>
           </div>
